<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imag1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp">

        </TextView>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/email"/>


    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_event"
        android:gravity="center"
        android:textSize="25sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:text="@string/action"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="10dp">

    </TextView>

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nter_date_and_time"
        android:textSize="25sp"
        android:gravity="center"/>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/schedule"
        />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="10dp">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

    <EditText
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/year"
        android:inputType="number"
        android:textSize="10sp"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="10sp"
        android:inputType="number"
        android:text="@string/month"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="10sp"
        android:inputType="number"
        android:text="@string/day"/>

    <EditText
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="10sp"
        android:inputType="number"
        android:text="@string/hour"/>
    <EditText
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="10sp"
        android:inputType="number"
        android:text="@string/min"/>
    <EditText
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="10sp"
        android:inputType="number"
        android:text="@string/sec"/>
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp">

    </TextView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_event"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

</LinearLayout>