<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imag1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon_email"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/email" />

    <TextView
        android:id="@+id/textViewActionName"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/stopwatch" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/day"
            android:textSize="16sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/hour"
            android:textSize="16sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/min"
            android:textSize="16sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/sec"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hourTextView"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/minTextView"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/secTextView"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonDeleteEvent"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/delete_event"
        android:text="@string/delete_event" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-1501215034144631/6744755337" />
</LinearLayout>